--- a/AwesomeBooks/src/app/book.component.html
+++ b/AwesomeBooks/src/app/book.component.html
@@ -1,7 +1,6 @@
-<!-- TODO: create a grid layout? This one does not work -->
 <div class="container" style="margin-top:70px;">
     <div class="row">
-        <div class="col-sm-12">
+        <div class="col-sm-6">
             <div *ngFor = "let book of book | async"> 
                 <div class="card mb-3" style="width: 40rem; margin: auto; display: flex;">
                     <div class="card-header">
@@ -35,18 +34,31 @@
                         <img src="https://raw.githubusercontent.com/benoitvallon/100-best-books/master/static/{{book.imageLink}}" height="200"/>
                         <!-- <p class="card-text">Lorem ipsum dolor amet mustache knausgaard +1, blue bottle waistcoat tbh semiotics artisan synth stumptown gastropub cornhole celiac swag. Brunch raclette vexillologist post-ironic glossier ennui XOXO mlkshk godard pour-over blog tumblr humblebrag. Blue bottle put a bird on it twee prism biodiesel brooklyn. Blue bottle ennui tbh succulents.</p> -->
                     </div>
-                    <div class="card-footer">
+                    <!-- <div class="card-footer">
                         <a href="https://loremipsum.io/ultimate-list-of-lorem-ipsum-generators/">-> Hipster Ipsum source</a>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>  <!-- col -->
-    </div>      <!-- row -->
-</div>          <!-- container -->
 
-<div class="container">
-    <div class="row">
-        <div class="col-sm-12">
+        <div class="col-sm-6">
+            <div style="display: flex; justify-content: space-between;">
+                <h3>Reviews:</h3>
+                <ng-container
+                    *ngIf = "authService.isAuthenticated$ | async; else loggedOut">
+                    <div *ngIf = "authService.user$ | async as user">
+                        <button class="btn btn-secondary add-button" data-toggle="modal" data-target="#addReviewModal">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-lg" viewBox="0 0 16 16">
+                                <path fill-rule="evenodd" d="M8 2a.5.5 0 0 1 .5.5v5h5a.5.5 0 0 1 0 1h-5v5a.5.5 0 0 1-1 0v-5h-5a.5.5 0 0 1 0-1h5v-5A.5.5 0 0 1 8 2Z"/>
+                            </svg>
+                            Add review
+                        </button>
+                    </div>
+                </ng-container>
+                <ng-template #loggedOut>
+                    <p>Please log in to leave a review.</p>
+                </ng-template>
+            </div>
             <div *ngFor="let book of book | async">
                 <div *ngFor="let review of reviews | async">
                     <div class="card bg-light mb-3"
@@ -59,25 +71,6 @@
                         </div>
                         <div class="card-body">
                             <p class="comment">{{review.comment}}</p>
-                            <!-- <ng-container
-                                *ngIf = "authService.isAuthenticated$ | async;">
-                                <div *ngIf = "authService.user$ | async as user">
-                                    <button class="btn btn-secondary edit-button" data-toggle="modal" data-target="#editReviewModal">
-                                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil" viewBox="0 0 16 16">
-                                            <path d="M12.146.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-10 10a.5.5 0 0 1-.168.11l-5 2a.5.5 0 0 1-.65-.65l2-5a.5.5 0 0 1 .11-.168l10-10zM11.207 2.5 13.5 4.793 14.793 3.5 12.5 1.207 11.207 2.5zm1.586 3L10.5 3.207 4 9.707V10h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.293l6.5-6.5zm-9.761 5.175-.106.106-1.528 3.821 3.821-1.528.106-.106A.5.5 0 0 1 5 12.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.468-.325z"/>
-                                        </svg>
-                                        Edit
-                                    </button>
-                                    <button class="btn btn-danger delete-button"
-                                    (click)="onReviewDelete()">
-                                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16">
-                                            <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z"/>
-                                            <path fill-rule="evenodd" d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z"/>
-                                        </svg>
-                                        Delete
-                                    </button>
-                                </div>
-                            </ng-container> -->
                         </div>
                         <div class="card-footer">
                             <strong>Rating:</strong> {{review.stars}} stars
@@ -88,57 +81,6 @@
         </div>
     </div>
 </div>
-
-
-<div class="container">
-    <div class="row">
-        <div class="col-sm-12">
-            <ng-container
-                *ngIf = "authService.isAuthenticated$ | async;
-                else loggedOut">
-                <div *ngIf = "authService.user$ | async as user">                    
-                    <h2>What did you think of this book?</h2>
-                    <p>Please leave your review below.</p>
-                    <form [formGroup]="reviewForm" (ngSubmit)="onSubmit()">
-                        <div class="form-group">
-                            <label for="name">Name</label>
-                            <input type="text" id="name" name="name" 
-                                class="form-control" 
-                                formControlName="name"
-                                [ngClass]="{ 'error' : isInvalid('name')}">
-                        </div>
-                        <div class="form-group">
-                            <label for="review">Please leave your review below</label>
-                            <textarea name="review" id="review" rows="3" 
-                                class="form-control"
-                                formControlName="review"
-                                [ngClass]="{ 'error' : isInvalid('review')}"
-                            ></textarea>
-                        </div>
-                        <div class="form-group">
-                            <label for="stars">Please provide a rating (5 = best)</label>
-                            <select name="stars" id="stars" 
-                                class="form-control" formControlName="stars">
-                                <option value="1">1 star</option>
-                                <option value="2">2 stars</option>
-                                <option value="3">3 stars</option>
-                                <option value="4">4 stars</option>
-                                <option value="5">5 stars</option>
-                            </select>
-                        </div>
-                        <span *ngIf="isIncomplete()" class="error">You must complete all fields</span>
-                        <button *ngIf="!isIncomplete()" type="submit" class="btn btn-primary">Submit</button>
-                    </form> 
-                </div>
-            </ng-container>
-            
-            <ng-template #loggedOut>
-                <h2>Please log in to leave a review.</h2>
-            </ng-template>
-        </div>  
-    </div>      
-</div>          
-
 
 <!-- Edit Book Modal -->
 <div class="modal fade" id="editBookModal" tabindex="-1" role="dialog" aria-labelledby="editBookModalLabel" aria-hidden="true">
@@ -214,6 +156,53 @@
     </div>
 </div>
 </div>
+
+<!-- Add review Modal -->
+<div class="modal fade" id="addReviewModal" tabindex="-1" role="dialog" aria-labelledby="addReviewModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+        <div class="modal-header">
+            <h5 class="modal-title" id="addReviewModalLabel">Add Review</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+        <div class="modal-body">
+            <p>Please leave your review below.</p>
+            <form [formGroup]="reviewForm" (ngSubmit)="onSubmit()">
+                <div class="form-group">
+                    <label for="name">Name</label>
+                    <input type="text" id="name" name="name" 
+                        class="form-control" 
+                        formControlName="name"
+                        [ngClass]="{ 'error' : isInvalid('name')}">
+                </div>
+                <div class="form-group">
+                    <label for="review">Please leave your review below</label>
+                    <textarea name="review" id="review" rows="3" 
+                        class="form-control"
+                        formControlName="review"
+                        [ngClass]="{ 'error' : isInvalid('review')}"
+                    ></textarea>
+                </div>
+                <div class="form-group">
+                    <label for="stars">Please provide a rating (5 = best)</label>
+                    <select name="stars" id="stars" 
+                        class="form-control" formControlName="stars">
+                        <option value="1">1 star</option>
+                        <option value="2">2 stars</option>
+                        <option value="3">3 stars</option>
+                        <option value="4">4 stars</option>
+                        <option value="5">5 stars</option>
+                    </select>
+                </div>
+                <span *ngIf="isIncomplete()" class="error">You must complete all fields</span>
+                <button *ngIf="!isIncomplete()" type="submit" class="btn btn-primary">Submit</button> 
+            </form>
+        </div>
+        </div>
+    </div>
+    </div>
 
 
 <!-- Modal Script -->
