--- a/AwesomeBooks/src/app/books.component.html
+++ b/AwesomeBooks/src/app/books.component.html
@@ -1,7 +1,7 @@
 <!-- TODO: create a grid layout? This one does not work -->
 <div class="container" style="margin-top:70px;">
     <div class="row">
-        <div class="col-sm-12 text-center">
+        <div class="col-sm-6 text-end">
             <div class="dropdown">
                 <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   Sort by
@@ -13,6 +13,19 @@
                   <button class="dropdown-item" type="button" (click)="onSortByClicked('title_desc')">Title Desc</button>
                 </div>
               </div>
+        </div>
+        <div class="col-sm-6">
+            <ng-container
+                *ngIf = "authService.isAuthenticated$ | async;">
+                <div *ngIf = "authService.user$ | async as user">
+                    <button class="btn btn-secondary add-button" data-toggle="modal" data-target="#addBookModal">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-lg" viewBox="0 0 16 16">
+                            <path fill-rule="evenodd" d="M8 2a.5.5 0 0 1 .5.5v5h5a.5.5 0 0 1 0 1h-5v5a.5.5 0 0 1-1 0v-5h-5a.5.5 0 0 1 0-1h5v-5A.5.5 0 0 1 8 2Z"/>
+                        </svg>
+                        Add book
+                    </button>
+                </div>
+            </ng-container>
         </div>
     </div>
 </div>
@@ -34,9 +47,9 @@
                         <img src="https://raw.githubusercontent.com/benoitvallon/100-best-books/master/static/{{book.imageLink}}" height="200"/>
                         <!-- <p class="card-text">Lorem ipsum dolor amet mustache knausgaard +1, blue bottle waistcoat tbh semiotics artisan synth stumptown gastropub cornhole celiac swag. Brunch raclette vexillologist post-ironic glossier ennui XOXO mlkshk godard pour-over blog tumblr humblebrag. Blue bottle put a bird on it twee prism biodiesel brooklyn. Blue bottle ennui tbh succulents.</p> -->
                     </div>
-                    <div class="card-footer">
+                    <!-- <div class="card-footer">
                         <a href="https://loremipsum.io/ultimate-list-of-lorem-ipsum-generators/">-> Hipster Ipsum source</a>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>  <!-- col -->
@@ -60,74 +73,69 @@
     
 </div>          <!-- container -->
 
-<div class="container">
-    <div class="row">
-        <div class="col-sm-12">
-            <ng-container
-                *ngIf = "authService.isAuthenticated$ | async;
-                else loggedOut">
-                <div *ngIf = "authService.user$ | async as user">
-                    <h2>Add a new book</h2>
-                    <form [formGroup]="addBookForm" (ngSubmit)="onBookAddSubmit()">
-                        <div class="form-group">
-                            <label for="title">Title</label>
-                            <input type="text" id="title" name="title" 
-                                class="form-control" 
-                                formControlName="title" required>
-                        </div>
-                        <div class="form-group">
-                            <label for="author">Author</label>
-                            <input type="text" id="author" name="author" 
-                                class="form-control" 
-                                formControlName="author" required>
-                        </div>
-                        <div class="form-group">
-                            <label for="country">Country</label>
-                            <input type="text" id="country" name="country" 
-                                class="form-control" 
-                                formControlName="country" required>
-                        </div>
-                        <div class="form-group">
-                            <label for="imageLink">Image Link</label>
-                            <input type="text" id="imageLink" name="imageLink" 
-                                class="form-control" 
-                                formControlName="imageLink" required>
-                        </div>
-                        <div class="form-group">
-                            <label for="language">Language</label>
-                            <input type="text" id="language" name="language" 
-                                class="form-control" 
-                                formControlName="language" required>
-                        </div>
-                        <div class="form-group">
-                            <label for="link">Link</label>
-                            <input type="text" id="link" name="link" 
-                                class="form-control" 
-                                formControlName="link" required>
-                        </div>
-                        <div class="form-group">
-                            <label for="pages">Pages</label>
-                            <input type="number" id="pages" name="pages" 
-                                class="form-control" 
-                                formControlName="pages" required>
-                        </div>
-                        <div class="form-group">
-                            <label for="year">Year</label>
-                            <input type="number" id="year" name="year" 
-                                class="form-control" 
-                                formControlName="year" required>
-                        </div>
-            
-                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                        <button type="submit" class="btn btn-primary">Save changes</button>
-                    </form> 
+<!-- Add Book Modal -->
+<div class="modal fade" id="addBookModal" tabindex="-1" role="dialog" aria-labelledby="addBookModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+        <div class="modal-header">
+            <h5 class="modal-title" id="addBookModalLabel">Add new book</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+        <div class="modal-body">
+            <form [formGroup]="addBookForm" (ngSubmit)="onBookAddSubmit()">
+                <div class="form-group">
+                    <label for="title">Title</label>
+                    <input type="text" id="title" name="title" 
+                        class="form-control" 
+                        formControlName="title" required>
                 </div>
-            </ng-container>
-        
-            <ng-template #loggedOut>
-                <h2>Please log in to add a book.</h2>
-            </ng-template>
-          
-        </div>  
-    </div>      
-</div>
+                <div class="form-group">
+                    <label for="author">Author</label>
+                    <input type="text" id="author" name="author" 
+                        class="form-control" 
+                        formControlName="author" required>
+                </div>
+                <div class="form-group">
+                    <label for="country">Country</label>
+                    <input type="text" id="country" name="country" 
+                        class="form-control" 
+                        formControlName="country" required>
+                </div>
+                <div class="form-group">
+                    <label for="imageLink">Image Link</label>
+                    <input type="text" id="imageLink" name="imageLink" 
+                        class="form-control" 
+                        formControlName="imageLink" required>
+                </div>
+                <div class="form-group">
+                    <label for="language">Language</label>
+                    <input type="text" id="language" name="language" 
+                        class="form-control" 
+                        formControlName="language" required>
+                </div>
+                <div class="form-group">
+                    <label for="link">Link</label>
+                    <input type="text" id="link" name="link" 
+                        class="form-control" 
+                        formControlName="link" required>
+                </div>
+                <div class="form-group">
+                    <label for="pages">Pages</label>
+                    <input type="number" id="pages" name="pages" 
+                        class="form-control" 
+                        formControlName="pages" required>
+                </div>
+                <div class="form-group">
+                    <label for="year">Year</label>
+                    <input type="number" id="year" name="year" 
+                        class="form-control" 
+                        formControlName="year" required>
+                </div>
+                <button type="submit" class="btn btn-primary">Add book</button>
+            </form> 
+        </div>
+        </div>
+    </div>
+    </div>
